Precision config, fixed customitems